--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 6rem;
+  gap: 6em;
 }
 .comments-votes {
   display: flex;
