--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,20 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  color:azure;
+  background-color: rgb(10, 48, 92);
 }
 
 .article-grid {
   display: flex;
-  flex-direction: row;
+  flex-direction: colums;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 6em;
+  gap: 1rem;
+}
+.article-card:hover {
+  opacity: 0.9;
+
 }
 .comments-votes {
   display: flex;
