--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,14 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  box-sizing: border-box;
+  /* margin: 0 auto;
+  padding: 2rem; */
+  text-align: left;
   color:rgb(12, 17, 17);
-  /* background-color: #90e0ef; */
+  /* background-color: #64B4F6; */
   /* background-color: rgb(10, 48, 92); */
 }
+
 
 .article-grid {
   display: flex;
@@ -32,26 +34,13 @@
   gap: 2em;
 }
 
-/* .comment-form {
-  display: inline-flex;
-  flex-direction: column;
-} */
-.card-footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-}
-
-.nav-list {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 2rem;
-}
-
 .topic-list {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  gap: 4rem;
+  text-decoration: none;
+}
+
+.topic-list:hover {
+  color: black;
+  background-color: #BBDEFB;
+  padding: 1rem 2rem;
+  border-radius: 5px;
 }
