--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,23 @@
+body {
+  margin: 0 auto;
+  padding: 0;
+}
+
+html {
+  margin: 0;
+  padding: 0;
+}
+
 #root {
   max-width: 1280px;
   box-sizing: border-box;
-  /* margin: 0 auto;
-  padding: 2rem; */
-  text-align: left;
+  margin: 0 auto;
+  padding-left: 0;
+  text-align: center;
   color:rgb(12, 17, 17);
   /* background-color: #64B4F6; */
   /* background-color: rgb(10, 48, 92); */
 }
-
 
 .article-grid {
   display: flex;
@@ -41,6 +50,6 @@
 .topic-list:hover {
   color: black;
   background-color: #BBDEFB;
-  padding: 1rem 2rem;
+  padding: 0.5rem 1rem;
   border-radius: 5px;
 }
