--- a/src/App.css
+++ b/src/App.css
@@ -9,19 +9,19 @@ html {
 }
 
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   box-sizing: border-box;
   margin: 0 auto;
   padding-left: 0;
   text-align: center;
-  color:rgb(12, 17, 17);
+  color: #143362;
   /* background-color: #64B4F6; */
   /* background-color: rgb(10, 48, 92); */
 }
 
 .article-grid {
   display: flex;
-  flex-direction: colums;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   gap: 1rem;
@@ -45,11 +45,15 @@ html {
 
 .topic-list {
   text-decoration: none;
+  color: #143362;
 }
 
 .topic-list:hover {
   color: black;
   background-color: #BBDEFB;
-  padding: 0.5rem 1rem;
+  padding: 1rem 0.5rem;
   border-radius: 5px;
+}
+.icon:hover {
+  color: #BBDEFB;
 }
